Fix lingering mention of VideoEncoderConfig.crop*

--- a/index.src.html
+++ b/index.src.html
@@ -1100,8 +1100,8 @@ Algorithms {#videoencoder-algorithms}
         2. Let |output_config| be a {{VideoDecoderConfig}} that describes
             |output|. Initialize |output_config| as follows:
             1. Assign `encoder_config.codec` to `output_config.codec`.
-            2. Assign `encoder_config.cropWidth` to `output_config.cropWidth`.
-            3. Assign `encoder_config.cropHeight` to `output_config.cropHeight`.
+            2. Assign `encoder_config.width` to `output_config.cropWidth`.
+            3. Assign `encoder_config.height` to `output_config.cropHeight`.
             4. Assign `encoder_config.displayWidth` to
                 `output_config.displayWidth`.
             5. Assign `encoder_config.displayHeight` to
